# private-dots

./: .face.icon  .ultracandy-zsh.zsh  README.md
.config/: background
.config/btop/: btop.conf
.config/cava/: config
.config/fastfetch/: config.jsonc
.config/gtk-3.0/: gtk.css  settings.ini
.config/gtk-4.0/: colors.css  gtk.css
.config/hypr/: colors.conf  hypridle.conf  hyprland.conf  hyprlock.conf  monitors.conf
.config/hyprpanel/: config.json
.config/kitty/: colors.conf  kitty.conf
.config/matugen/: config.toml
.config/nvtop/: interface.ini
.config/nwg-dock-hyprland/: launch.sh  style.css
.config/nwg-look/: config
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf
.config/rofi/: bluetooth-menu.rasi  colors.rasi  config-cliphist.rasi  config-compact.rasi  config-glyph-emoji.rasi  config-hyprshade.rasi  config-old.rasi  config-screenshot.rasi  config-short.rasi  config-themes.rasi  config.rasi  power-menu.rasi  rofi-menus.rasi  rofi.rasi  theme.rasi  wifi-menu.rasi
.config/swaync/: colors.css  config.json  recorder.sh  style.css
.config/waybar/: config.jsonc  style.css
.config/waypaper/: config.ini  config.json
.config/wlogout/: style.css
GJS/: README.md  candy-system-monitor.js  gjs-media-player.desktop  gjs-toggle-controls.desktop  meson.build  setup-custom-icon.sh  test_layout.js  test_media_menu.js  toggle-control-center.sh  toggle-hyprland-settings.sh  toggle-media-player.sh  toggle-system-monitor.sh  toggle-weather-widget.sh  toggle.js
GJS/src/: main.js  system-monitor.js
GJS/~/.local/share/icons/hicolor/: index.theme
(+54 files in other folders)
