project('gjs-dropdown-menu', 'jscript', version: '0.1.0')

src = files('src/main.js')

install_data('resources', install_dir: join_paths(get_option('datadir'), 'gjs-dropdown-menu/resources'))

install_data('README.md', install_dir: get_option('datadir'))

install_subdir('src', install_dir: join_paths(get_option('datadir'), 'gjs-dropdown-menu/src')) 